src/App.css
/* ... */
.project-title {
  font-size: 1.5em;
}

.project-container img {
  height: 350px;
  width: 100%;
  object-fit: cover;
  -moz-border-radius: 0px;
  -webkit-border-radius: 10px 10px 0px 0px;
  border-radius: 10px 10px 0px 0px;
}

.project-data-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 10px;
  padding: 20px;
  width: 90%;
}

.project-link {
  background-color: white;
  color: var(--dark-grey-blue);
  padding: 5px 15px;
  border-radius: 10px;
  font-weight: bold;
}

/****** EXPERIENCE ******/

.experience-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  transition: max-height 0.5s ease;
}

.experience-header {
  background-color: var(--orange);
  color: white;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  border-radius: 10px;
  width: 50%;
  margin-bottom: 10px;
  cursor: pointer;
}

.arrow {
  width: 30px;
  height: 20px;
}

.experience-detail {
  background-color: var(--orange-light);
  border-radius: 10px;
  width: 50%;
  margin-bottom: 10px;
  padding: 10px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  transition: opacity 0.3s ease;
  opacity: 0;
  height: 0;
  overflow: hidden;
}

.experience-container.expanded .experience-detail {
  opacity: 1;
  height: auto;
  transition: opacity 0.3s ease, height 0.3s ease;
}

.experience-data h5 {
  text-decoration: underline;
  font-size: 1.1em;
}

.experience-description {
  margin: 10px;
}

.experience-tags {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  gap: 20px;
  margin: 20px;
}

.skill-tag {
  background-color: rgba(255, 68, 0, 0.5);
  padding: 5px;
  border-radius: 20px;
}

.experience-company {
  margin: 20px;
}

/****** REFERENCES ******/

.references-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  margin-bottom: 50px;
  position: relative;
}

.reference-container {
  background-color: white;
  color: var(--dark-grey-blue);
  box-shadow: 0 0 60px var(--dark-grey-blue);
  border-radius: 10px;
  padding: 25px;
  width: calc(35% - 20px);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  opacity: 0;
  transition: opacity 0.5s ease;
}

.reference-container.active {
  opacity: 1;
}

.reference-container:not(.active) {
  position: absolute;
  top: -9999px;
  left: -9999px;
  visibility: hidden;
}

.reference-container p {
  margin-bottom: 10px;
}

.reference-content {
  font-style: italic;
}

.reference-container a {
  display: flex;
  align-items: center;
  color: var(--orange);
  margin-top: 20px;
}

.reference-container a:hover {
  text-decoration: underline;
}

.reference-title {
  font-size: 14px;
}

.reference-container .quote {
  margin-right: 5px;
  font-size: 18px;
}

.reference-carousel {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 10px;
}

.reference-carousel button {
  font-size: smaller;
  text-decoration: dotted;
}

.reference-carousel button:hover {
  transform: scale(1.25);
}

/****** CONTACT ******/

.contact-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.contact-methods {
  display: flex;
  flex-direction: row;
  gap: 35px;
  justify-content: center;
  align-items: center;
  margin-bottom: 30px;
}

.contact-methods a {
  display: inline-block;
  color: var(--dark-grey-blue);
  margin-top: 20px;
  padding: 0 10px;
  border-radius: 10px;
  transition: color 0.3s ease;
}

.contact-methods a:hover {
  color: var(--orange);
}

.contact-sentance {
  margin: 50px 15%;
  font-size: 1.5em;
  text-align: center;
}

.contact-form {
  background-color: var(--dark-grey-blue);
  color: white;
  border-radius: 10px;
  margin-bottom: 50px;
  padding: 20px;
  width: 25%;
}

.contact-form h4 {
  font-size: 1.35em;
  margin-bottom: 20px;
}

form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 20px;
  gap: 30px;
}

input,
textarea {
  color: rgb(99, 99, 99);
  border-radius: 10px;
  border: none;
}
textarea {
  height: 150px;
}

label {
  display: flex;
  flex-direction: column;
}

form button {
  background-color: rgb(255, 84, 21);
  color: white;
  padding: 5px 15px;
  border-radius: 10px;
  font-weight: bold;
}

.separator {
  border: 1px solid var(--dark-grey-blue);
  width: 40%;
  margin: auto;
  box-shadow: 10px 10px 10px var(--dark-grey-blue);
}

/****** ERROR PAGE ******/

.error-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 30px;
  margin-top: 140px;
}

.error-section .error-home-button {
  box-shadow: 0px 0px 10px var(--dark-grey-blue);
  border-radius: 10px;
  padding: 5px 15px;
}

/***** MEDIA QUERIES FOR SMALLER SCREENS ******/

@media only screen and (max-width: 1090px) {
  .portfolio-home-section {
    margin: 0 10px;
  }

  .my-avatar {
    margin-top: 70px;
    height: 250px;
    width: 250px;
  }

  .my-name {
    font-size: 2.5em;
    margin: 40px 0;
    line-height: 40px;
  }

  .arrow-down {
    height: 40px;
    margin-top: 150px;
  }

  .experience-header,
  .experience-detail {
    width: 85%;
  }

  .contact-form {
    width: 50%;
  }

  .error-section img {
    width: 300px;
  }
}

@media only screen and (max-width: 440px) {
  .my-avatar {
    margin-top: 45px;
  }

  .section-name {
    font-size: 2.1em;
  }

  .skill-container,
  .project-container,
  .project-container img,
  .experience-header,
  .experience-detail,
  .reference-container,
  .references-container,
  .contact-form {
    border-radius: 5px;
    width: 100vw;
    margin: 0;
  }
}

@media only screen and (max-height: 910px) {
  .my-name {
    font-size: 2.7em;
    margin: 0;
  }
}
/* ... */

